@@ -1,6 +1,8 @@
 Changes in 0.14.8:
   * Fixed bug where streams for commits on distributed branches didn't always
     get set properly
+  * reworked findTrove() in repository to return (name, version, flavor)
+    tuples instead of full troves
 
 Changes in 0.14.7:
   * ELF libraries with sonames that have paths in them are now handled
